@@ -1,3 +1,7 @@
+2011-12-12  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gcc.c-torture/execute/20111212-1.c: New test.
+
 2011-12-11  Tobias Burnus  <burnus@net-b.de>
 
 	PR fortran/50923
